# cloudsmith-cs-interview-candidate

./: README.md  pyproject.toml
.github/workflows/: build_package.yml  promote_package.yml  realease_package.yml
src/example_package/: __init__.py  example.py
