[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "example_package"  # Issue 1
version = "0.0.1"  # Issue 2
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
] 

[tool.hatch.build.targets.wheel]  # Issue 3
packages = ["src/example_package"]